--- a/4_1_multivariable_linear_regression.ipynb
+++ b/4_1_multivariable_linear_regression.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Lab 4-1: Multivariable Linear Regression"
+    "# Lab 4-1: Multivariate Linear Regression"
    ]
   },
   {
@@ -19,8 +19,7 @@
    "metadata": {},
    "source": [
     "<div class=\"alert alert-warning\">\n",
-    "    nn.Module 과 nn.Linear 대신 pure PyTorch로 해볼까?\n",
-    "    ... 해야 matrix 부분을 소개할 수 있을것 같다.\n",
+    "    We use elemental PyTorch to implement linear regression here. However, in most actual applications, abstractions such as <code>nn.Module</code> or <code>nn.Linear</code> are used.\n",
     "</div>"
    ]
   },
@@ -28,7 +27,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Hypothesis and cost function"
+    "## Theoretical Overview"
    ]
   },
   {
@@ -57,7 +56,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## PyTorch"
+    "## Imports"
    ]
   },
   {
@@ -80,7 +79,7 @@
     {
      "data": {
       "text/plain": [
-       "<torch._C.Generator at 0x7fe92804df90>"
+       "<torch._C.Generator at 0x7fd26ff8afb0>"
       ]
      },
      "execution_count": 2,
@@ -97,12 +96,120 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "우선 피팅할 가짜 데이터를 만들자."
+    "## Naive Data Representation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We will use fake data for this example."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 데이터\n",
+    "x1_train = torch.FloatTensor([[73], [93], [89], [96], [73]])\n",
+    "x2_train = torch.FloatTensor([[80], [88], [91], [98], [66]])\n",
+    "x3_train = torch.FloatTensor([[75], [93], [90], [100], [70]])\n",
+    "y_train = torch.FloatTensor([[152], [185], [180], [196], [142]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch    0/1000 w1: 0.294 w2: 0.297 w3: 0.297 b: 0.003 Cost: 29661.800781\n",
+      "Epoch  100/1000 w1: 0.674 w2: 0.676 w3: 0.676 b: 0.008 Cost: 1.563634\n",
+      "Epoch  200/1000 w1: 0.679 w2: 0.677 w3: 0.677 b: 0.008 Cost: 1.497603\n",
+      "Epoch  300/1000 w1: 0.684 w2: 0.677 w3: 0.677 b: 0.008 Cost: 1.435026\n",
+      "Epoch  400/1000 w1: 0.689 w2: 0.678 w3: 0.678 b: 0.008 Cost: 1.375730\n",
+      "Epoch  500/1000 w1: 0.694 w2: 0.678 w3: 0.678 b: 0.009 Cost: 1.319503\n",
+      "Epoch  600/1000 w1: 0.699 w2: 0.679 w3: 0.679 b: 0.009 Cost: 1.266215\n",
+      "Epoch  700/1000 w1: 0.704 w2: 0.679 w3: 0.679 b: 0.009 Cost: 1.215693\n",
+      "Epoch  800/1000 w1: 0.709 w2: 0.679 w3: 0.679 b: 0.009 Cost: 1.167821\n",
+      "Epoch  900/1000 w1: 0.713 w2: 0.680 w3: 0.680 b: 0.009 Cost: 1.122419\n",
+      "Epoch 1000/1000 w1: 0.718 w2: 0.680 w3: 0.680 b: 0.009 Cost: 1.079375\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 모델 초기화\n",
+    "w1 = torch.zeros(1, requires_grad=True)\n",
+    "w2 = torch.zeros(1, requires_grad=True)\n",
+    "w3 = torch.zeros(1, requires_grad=True)\n",
+    "b = torch.zeros(1, requires_grad=True)\n",
+    "# optimizer 설정\n",
+    "optimizer = optim.SGD([w1, w2, w3, b], lr=1e-5)\n",
+    "\n",
+    "nb_epochs = 1000\n",
+    "for epoch in range(nb_epochs + 1):\n",
+    "    \n",
+    "    # H(x) 계산\n",
+    "    hypothesis = x1_train * w1 + x2_train * w2 + x3_train * w3 + b\n",
+    "\n",
+    "    # cost 계산\n",
+    "    cost = torch.mean((hypothesis - y_train) ** 2)\n",
+    "\n",
+    "    # cost로 H(x) 개선\n",
+    "    optimizer.zero_grad()\n",
+    "    cost.backward()\n",
+    "    optimizer.step()\n",
+    "\n",
+    "    # 100번마다 로그 출력\n",
+    "    if epoch % 100 == 0:\n",
+    "        print('Epoch {:4d}/{} w1: {:.3f} w2: {:.3f} w3: {:.3f} b: {:.3f} Cost: {:.6f}'.format(\n",
+    "            epoch, nb_epochs, w1.item(), w3.item(), w3.item(), b.item(), cost.item()\n",
+    "        ))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Matrix Data Representation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\begin{pmatrix}\n",
+    "x_1 & x_2 & x_3\n",
+    "\\end{pmatrix}\n",
+    "\\cdot\n",
+    "\\begin{pmatrix}\n",
+    "w_1 \\\\\n",
+    "w_2 \\\\\n",
+    "w_3 \\\\\n",
+    "\\end{pmatrix}\n",
+    "=\n",
+    "\\begin{pmatrix}\n",
+    "x_1w_1 + x_2w_2 + x_3w_3\n",
+    "\\end{pmatrix}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$ H(X) = XW $$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,69 +222,108 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "기본적으로 PyTorch는 가장 먼저 NCHW 형태이다."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "torch.Size([5, 3])"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "x_train.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "torch.Size([5, 1])"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "y_train.shape"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "이제 linear regression 모델을 만들면 되는데, 기본적으로 PyTorch의 모든 모델은 제공되는 `nn.Module`을 inherit 해서 만들게 됩니다."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([5, 3])\n",
+      "torch.Size([5, 1])\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(x_train.shape)\n",
+    "print(y_train.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch    0/20 hypothesis: tensor([0., 0., 0., 0., 0.]) Cost: 29661.800781\n",
+      "Epoch    1/20 hypothesis: tensor([67.2578, 80.8397, 79.6523, 86.7394, 61.6605]) Cost: 9298.520508\n",
+      "Epoch    2/20 hypothesis: tensor([104.9128, 126.0990, 124.2466, 135.3015,  96.1821]) Cost: 2915.713135\n",
+      "Epoch    3/20 hypothesis: tensor([125.9942, 151.4381, 149.2133, 162.4896, 115.5097]) Cost: 915.040527\n",
+      "Epoch    4/20 hypothesis: tensor([137.7968, 165.6247, 163.1911, 177.7112, 126.3307]) Cost: 287.936005\n",
+      "Epoch    5/20 hypothesis: tensor([144.4044, 173.5674, 171.0168, 186.2332, 132.3891]) Cost: 91.371017\n",
+      "Epoch    6/20 hypothesis: tensor([148.1035, 178.0144, 175.3980, 191.0042, 135.7812]) Cost: 29.758139\n",
+      "Epoch    7/20 hypothesis: tensor([150.1744, 180.5042, 177.8508, 193.6753, 137.6805]) Cost: 10.445305\n",
+      "Epoch    8/20 hypothesis: tensor([151.3336, 181.8983, 179.2240, 195.1707, 138.7440]) Cost: 4.391228\n",
+      "Epoch    9/20 hypothesis: tensor([151.9824, 182.6789, 179.9928, 196.0079, 139.3396]) Cost: 2.493135\n",
+      "Epoch   10/20 hypothesis: tensor([152.3454, 183.1161, 180.4231, 196.4765, 139.6732]) Cost: 1.897688\n",
+      "Epoch   11/20 hypothesis: tensor([152.5485, 183.3610, 180.6640, 196.7389, 139.8602]) Cost: 1.710541\n",
+      "Epoch   12/20 hypothesis: tensor([152.6620, 183.4982, 180.7988, 196.8857, 139.9651]) Cost: 1.651413\n",
+      "Epoch   13/20 hypothesis: tensor([152.7253, 183.5752, 180.8742, 196.9678, 140.0240]) Cost: 1.632387\n",
+      "Epoch   14/20 hypothesis: tensor([152.7606, 183.6184, 180.9164, 197.0138, 140.0571]) Cost: 1.625923\n",
+      "Epoch   15/20 hypothesis: tensor([152.7802, 183.6427, 180.9399, 197.0395, 140.0759]) Cost: 1.623412\n",
+      "Epoch   16/20 hypothesis: tensor([152.7909, 183.6565, 180.9530, 197.0538, 140.0865]) Cost: 1.622141\n",
+      "Epoch   17/20 hypothesis: tensor([152.7968, 183.6643, 180.9603, 197.0618, 140.0927]) Cost: 1.621253\n",
+      "Epoch   18/20 hypothesis: tensor([152.7999, 183.6688, 180.9644, 197.0662, 140.0963]) Cost: 1.620500\n",
+      "Epoch   19/20 hypothesis: tensor([152.8014, 183.6715, 180.9666, 197.0686, 140.0985]) Cost: 1.619770\n",
+      "Epoch   20/20 hypothesis: tensor([152.8020, 183.6731, 180.9677, 197.0699, 140.1000]) Cost: 1.619033\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 모델 초기화\n",
+    "W = torch.zeros((3, 1), requires_grad=True)\n",
+    "b = torch.zeros(1, requires_grad=True)\n",
+    "# optimizer 설정\n",
+    "optimizer = optim.SGD([W, b], lr=1e-5)\n",
+    "\n",
+    "nb_epochs = 20\n",
+    "for epoch in range(nb_epochs + 1):\n",
+    "    \n",
+    "    # H(x) 계산\n",
+    "    hypothesis = x_train.matmul(W) + b # or .mm or @\n",
+    "\n",
+    "    # cost 계산\n",
+    "    cost = torch.mean((hypothesis - y_train) ** 2)\n",
+    "\n",
+    "    # cost로 H(x) 개선\n",
+    "    optimizer.zero_grad()\n",
+    "    cost.backward()\n",
+    "    optimizer.step()\n",
+    "\n",
+    "    # 100번마다 로그 출력\n",
+    "    print('Epoch {:4d}/{} hypothesis: {} Cost: {:.6f}'.format(\n",
+    "        epoch, nb_epochs, hypothesis.squeeze().detach(), cost.item()\n",
+    "    ))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## High-level Implementation with `nn.Module`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Do you remember this model?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "class LinearRegressionModel(nn.Module):\n",
     "    def __init__(self):\n",
     "        super().__init__()\n",
-    "        self.linear = nn.Linear(3, 1)\n",
+    "        self.linear = nn.Linear(1, 1)\n",
     "\n",
     "    def forward(self, x):\n",
     "        return self.linear(x)"
@@ -187,60 +333,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "모델의 `__init__`에서는 사용할 레이어들을 정의하게 됩니다. 여기서 우리는 linear regression 모델을 만들기 때문에, `nn.Linear` 를 이용할 것입니다. 그리고 `forward`에서는 이 모델이 어떻게 입력값에서 출력값을 계산하는지 알려줍니다."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "이제 모델을 생성해서 예측값 $H(x)$를 구해보자"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model = LinearRegressionModel()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "prediction = model(x_train)"
+    "We just need to change the input dimension from 1 to 3!"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tensor([[-6.7933],\n",
-      "        [-4.8968],\n",
-      "        [-6.5155],\n",
-      "        [-7.3361],\n",
-      "        [-2.6660]], grad_fn=<ThAddmmBackward>)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print(prediction)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "이제 mean squared error (MSE) 로 cost를 구해보자. MSE 역시 PyTorch에서 기본적으로 제공한다."
+    "class MultivariateLinearRegressionModel(nn.Module):\n",
+    "    def __init__(self):\n",
+    "        super().__init__()\n",
+    "        self.linear = nn.Linear(3, 1)\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        return self.linear(x)"
    ]
   },
   {
@@ -252,103 +360,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[-6.7933],\n",
-      "        [-4.8968],\n",
-      "        [-6.5155],\n",
-      "        [-7.3361],\n",
-      "        [-2.6660]], grad_fn=<ThAddmmBackward>)\n",
-      "tensor([[152.],\n",
-      "        [185.],\n",
-      "        [180.],\n",
-      "        [196.],\n",
-      "        [142.]])\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(prediction)\n",
-    "print(y_train)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cost = F.mse_loss(prediction, y_train)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tensor(31667.5977, grad_fn=<MseLossBackward>)\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(cost)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "마지막 주어진 cost를 이용해 $H(x)$ 의 $W, b$ 를 바꾸어서 cost를 줄여봅니다. 이때 PyTorch의 `torch.optim` 에 있는 `optimizer` 들 중 하나를 사용할 수 있습니다."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "optimizer = optim.SGD(model.parameters(), lr=0.01)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "optimizer.zero_grad()\n",
-    "cost.backward()\n",
-    "optimizer.step()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "이제 Linear Regression 코드를 이해했으니, 실제로 코드를 돌려 피팅시켜보겠습니다."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch  100/1000 Cost: 0.954945\n",
-      "Epoch  200/1000 Cost: 0.914483\n",
-      "Epoch  300/1000 Cost: 0.876153\n",
-      "Epoch  400/1000 Cost: 0.839847\n",
-      "Epoch  500/1000 Cost: 0.805431\n",
-      "Epoch  600/1000 Cost: 0.772845\n",
-      "Epoch  700/1000 Cost: 0.741979\n",
-      "Epoch  800/1000 Cost: 0.712734\n",
-      "Epoch  900/1000 Cost: 0.685022\n",
-      "Epoch 1000/1000 Cost: 0.658776\n"
+      "Epoch    0/20 Cost: 31667.597656\n",
+      "Epoch    1/20 Cost: 9926.266602\n",
+      "Epoch    2/20 Cost: 3111.513672\n",
+      "Epoch    3/20 Cost: 975.451355\n",
+      "Epoch    4/20 Cost: 305.908539\n",
+      "Epoch    5/20 Cost: 96.042488\n",
+      "Epoch    6/20 Cost: 30.260750\n",
+      "Epoch    7/20 Cost: 9.641701\n",
+      "Epoch    8/20 Cost: 3.178671\n",
+      "Epoch    9/20 Cost: 1.152871\n",
+      "Epoch   10/20 Cost: 0.517863\n",
+      "Epoch   11/20 Cost: 0.318801\n",
+      "Epoch   12/20 Cost: 0.256388\n",
+      "Epoch   13/20 Cost: 0.236821\n",
+      "Epoch   14/20 Cost: 0.230660\n",
+      "Epoch   15/20 Cost: 0.228719\n",
+      "Epoch   16/20 Cost: 0.228095\n",
+      "Epoch   17/20 Cost: 0.227880\n",
+      "Epoch   18/20 Cost: 0.227799\n",
+      "Epoch   19/20 Cost: 0.227762\n",
+      "Epoch   20/20 Cost: 0.227732\n"
      ]
     }
    ],
@@ -361,12 +393,12 @@
     "                             [73, 66, 70]])\n",
     "y_train = torch.FloatTensor([[152], [185], [180], [196], [142]])\n",
     "# 모델 초기화\n",
-    "model = LinearRegressionModel()\n",
+    "model = MultivariateLinearRegressionModel()\n",
     "# optimizer 설정\n",
     "optimizer = optim.SGD(model.parameters(), lr=1e-5)\n",
     "\n",
-    "nb_epochs = 1000\n",
-    "for epoch in range(nb_epochs):\n",
+    "nb_epochs = 20\n",
+    "for epoch in range(nb_epochs+1):\n",
     "    \n",
     "    # H(x) 계산\n",
     "    prediction = model(x_train)\n",
@@ -380,26 +412,9 @@
     "    optimizer.step()\n",
     "    \n",
     "    # 20번마다 로그 출력\n",
-    "    if epoch % 100 == 99:\n",
-    "        print('Epoch {:4d}/{} Cost: {:.6f}'.format(\n",
-    "            epoch+1, nb_epochs, cost.item()\n",
-    "        ))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "점점 $H(x)$ 의 $W$ 와 $b$ 를 조정해서 cost가 줄어드는 것을 볼 수 있습니다."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<div class=\"alert alert-warning\">\n",
-    "    W 와 b 값을 출력해볼까?\n",
-    "</div>"
+    "    print('Epoch {:4d}/{} Cost: {:.6f}'.format(\n",
+    "        epoch, nb_epochs, cost.item()\n",
+    "    ))"
    ]
   }
  ],
