Add dataset/dataloader code to Lab 4-2

--- a/4_2_load_data.ipynb
+++ b/4_2_load_data.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -264,13 +264,33 @@
        "array([ 2,  6, 10])"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "b[:, 1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 9, 10, 11, 12])"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "b[-1]"
    ]
   },
   {
@@ -290,7 +310,7 @@
     }
    ],
    "source": [
-    "b[-1]"
+    "b[-1, :]"
    ]
   },
   {
@@ -310,7 +330,7 @@
     }
    ],
    "source": [
-    "b[-1, :]"
+    "b[-1, ...]"
    ]
   },
   {
@@ -321,31 +341,11 @@
     {
      "data": {
       "text/plain": [
-       "array([ 9, 10, 11, 12])"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "b[-1, ...]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
        "array([[1, 2, 3, 4],\n",
        "       [5, 6, 7, 8]])"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -372,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -391,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -416,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -460,16 +460,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<torch._C.Generator at 0x7f528804e590>"
+       "<torch._C.Generator at 0x7f1324025110>"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -488,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -558,7 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -573,34 +573,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch    0/20 Cost: 28388.000000\n",
-      "Epoch    1/20 Cost: 10504.286133\n",
-      "Epoch    2/20 Cost: 3892.179688\n",
-      "Epoch    3/20 Cost: 1447.497314\n",
-      "Epoch    4/20 Cost: 543.628357\n",
-      "Epoch    5/20 Cost: 209.440048\n",
-      "Epoch    6/20 Cost: 85.878799\n",
-      "Epoch    7/20 Cost: 40.191814\n",
-      "Epoch    8/20 Cost: 23.297268\n",
-      "Epoch    9/20 Cost: 17.048059\n",
-      "Epoch   10/20 Cost: 14.734761\n",
-      "Epoch   11/20 Cost: 13.876624\n",
-      "Epoch   12/20 Cost: 13.556563\n",
-      "Epoch   13/20 Cost: 13.435411\n",
-      "Epoch   14/20 Cost: 13.387821\n",
-      "Epoch   15/20 Cost: 13.367404\n",
-      "Epoch   16/20 Cost: 13.357059\n",
-      "Epoch   17/20 Cost: 13.350419\n",
-      "Epoch   18/20 Cost: 13.345175\n",
-      "Epoch   19/20 Cost: 13.340427\n",
-      "Epoch   20/20 Cost: 13.335882\n"
+      "Epoch    0/20 Cost: 28693.488281\n",
+      "Epoch    1/20 Cost: 10618.750000\n",
+      "Epoch    2/20 Cost: 3936.015137\n",
+      "Epoch    3/20 Cost: 1465.219360\n",
+      "Epoch    4/20 Cost: 551.693909\n",
+      "Epoch    5/20 Cost: 213.934677\n",
+      "Epoch    6/20 Cost: 89.052261\n",
+      "Epoch    7/20 Cost: 42.876019\n",
+      "Epoch    8/20 Cost: 25.799616\n",
+      "Epoch    9/20 Cost: 19.482409\n",
+      "Epoch   10/20 Cost: 17.143106\n",
+      "Epoch   11/20 Cost: 16.274515\n",
+      "Epoch   12/20 Cost: 15.949698\n",
+      "Epoch   13/20 Cost: 15.825970\n",
+      "Epoch   14/20 Cost: 15.776586\n",
+      "Epoch   15/20 Cost: 15.754649\n",
+      "Epoch   16/20 Cost: 15.742906\n",
+      "Epoch   17/20 Cost: 15.734896\n",
+      "Epoch   18/20 Cost: 15.728317\n",
+      "Epoch   19/20 Cost: 15.722223\n",
+      "Epoch   20/20 Cost: 15.716329\n"
      ]
     }
    ],
@@ -644,16 +644,55 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div class=\"alert alert-warning\">\n",
-    "    pandas 기초지식이 필요할 것 같다\n",
-    "</div>"
+    "너무 데이터가 크면 `x_data`, `y_data` 를 전부 다 가져오지 말고, 필요한 배치만 가져올 수 밖에 없다."
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 28,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "너무 데이터가 크면 `x_data`, `y_data` 를 전부 다 가져오지 말고, 필요한 배치만 가져올 수 밖에 없다."
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "import torch.nn.functional as F\n",
+    "import torch.optim as optim\n",
+    "from torch.utils.data import Dataset, DataLoader"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class CustomDataset(Dataset):\n",
+    "    def __init__(self):\n",
+    "        self.x_data = [[73, 80, 75],\n",
+    "                       [93, 88, 93],\n",
+    "                       [89, 91, 90],\n",
+    "                       [96, 98, 100],\n",
+    "                       [73, 66, 70]]\n",
+    "        self.y_data = [[152], [185], [180], [196], [142]]\n",
+    "\n",
+    "    def __len__(self):\n",
+    "        return len(self.x_data)\n",
+    "\n",
+    "    def __getitem__(self, idx):\n",
+    "        x = torch.FloatTensor(self.x_data[idx])\n",
+    "        y = torch.FloatTensor(self.y_data[idx])\n",
+    "\n",
+    "        return x, y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset = CustomDataset()\n",
+    "dataloader = DataLoader(dataset, batch_size=2, shuffle=True)"
    ]
   },
   {
@@ -661,6 +700,129 @@
    "metadata": {},
    "source": [
     "[PyTorch Data Loading and Processing tutorial](https://pytorch.org/tutorials/beginner/data_loading_tutorial.html#iterating-through-the-dataset)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class MultivariateLinearRegressionModel(nn.Module):\n",
+    "    def __init__(self):\n",
+    "        super().__init__()\n",
+    "        self.linear = nn.Linear(3, 1)\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        return self.linear(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 모델 초기화\n",
+    "model = MultivariateLinearRegressionModel()\n",
+    "# optimizer 설정\n",
+    "optimizer = optim.SGD(model.parameters(), lr=1e-5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch    0/20 Batch 1/3 Cost: 46978.785156\n",
+      "Epoch    0/20 Batch 2/3 Cost: 6497.784668\n",
+      "Epoch    0/20 Batch 3/3 Cost: 5174.395996\n",
+      "Epoch    1/20 Batch 1/3 Cost: 711.106018\n",
+      "Epoch    1/20 Batch 2/3 Cost: 401.381378\n",
+      "Epoch    1/20 Batch 3/3 Cost: 212.294891\n",
+      "Epoch    2/20 Batch 1/3 Cost: 26.882061\n",
+      "Epoch    2/20 Batch 2/3 Cost: 0.057693\n",
+      "Epoch    2/20 Batch 3/3 Cost: 41.471272\n",
+      "Epoch    3/20 Batch 1/3 Cost: 13.444824\n",
+      "Epoch    3/20 Batch 2/3 Cost: 14.656877\n",
+      "Epoch    3/20 Batch 3/3 Cost: 5.495739\n",
+      "Epoch    4/20 Batch 1/3 Cost: 6.619390\n",
+      "Epoch    4/20 Batch 2/3 Cost: 19.459251\n",
+      "Epoch    4/20 Batch 3/3 Cost: 16.812302\n",
+      "Epoch    5/20 Batch 1/3 Cost: 19.544233\n",
+      "Epoch    5/20 Batch 2/3 Cost: 21.681820\n",
+      "Epoch    5/20 Batch 3/3 Cost: 13.138634\n",
+      "Epoch    6/20 Batch 1/3 Cost: 2.338879\n",
+      "Epoch    6/20 Batch 2/3 Cost: 21.505651\n",
+      "Epoch    6/20 Batch 3/3 Cost: 17.908745\n",
+      "Epoch    7/20 Batch 1/3 Cost: 8.261931\n",
+      "Epoch    7/20 Batch 2/3 Cost: 12.769864\n",
+      "Epoch    7/20 Batch 3/3 Cost: 24.187618\n",
+      "Epoch    8/20 Batch 1/3 Cost: 10.529057\n",
+      "Epoch    8/20 Batch 2/3 Cost: 14.057606\n",
+      "Epoch    8/20 Batch 3/3 Cost: 18.635973\n",
+      "Epoch    9/20 Batch 1/3 Cost: 0.210614\n",
+      "Epoch    9/20 Batch 2/3 Cost: 22.468868\n",
+      "Epoch    9/20 Batch 3/3 Cost: 20.725445\n",
+      "Epoch   10/20 Batch 1/3 Cost: 20.487284\n",
+      "Epoch   10/20 Batch 2/3 Cost: 7.705010\n",
+      "Epoch   10/20 Batch 3/3 Cost: 7.212080\n",
+      "Epoch   11/20 Batch 1/3 Cost: 20.363573\n",
+      "Epoch   11/20 Batch 2/3 Cost: 8.519358\n",
+      "Epoch   11/20 Batch 3/3 Cost: 4.553837\n",
+      "Epoch   12/20 Batch 1/3 Cost: 6.104103\n",
+      "Epoch   12/20 Batch 2/3 Cost: 13.997252\n",
+      "Epoch   12/20 Batch 3/3 Cost: 27.482769\n",
+      "Epoch   13/20 Batch 1/3 Cost: 7.775980\n",
+      "Epoch   13/20 Batch 2/3 Cost: 13.109329\n",
+      "Epoch   13/20 Batch 3/3 Cost: 23.921347\n",
+      "Epoch   14/20 Batch 1/3 Cost: 5.524771\n",
+      "Epoch   14/20 Batch 2/3 Cost: 19.877090\n",
+      "Epoch   14/20 Batch 3/3 Cost: 17.504499\n",
+      "Epoch   15/20 Batch 1/3 Cost: 11.427785\n",
+      "Epoch   15/20 Batch 2/3 Cost: 14.224229\n",
+      "Epoch   15/20 Batch 3/3 Cost: 24.827265\n",
+      "Epoch   16/20 Batch 1/3 Cost: 22.178373\n",
+      "Epoch   16/20 Batch 2/3 Cost: 14.530046\n",
+      "Epoch   16/20 Batch 3/3 Cost: 10.774013\n",
+      "Epoch   17/20 Batch 1/3 Cost: 21.197256\n",
+      "Epoch   17/20 Batch 2/3 Cost: 11.078669\n",
+      "Epoch   17/20 Batch 3/3 Cost: 14.773710\n",
+      "Epoch   18/20 Batch 1/3 Cost: 8.447533\n",
+      "Epoch   18/20 Batch 2/3 Cost: 20.012682\n",
+      "Epoch   18/20 Batch 3/3 Cost: 7.388034\n",
+      "Epoch   19/20 Batch 1/3 Cost: 14.731810\n",
+      "Epoch   19/20 Batch 2/3 Cost: 7.791116\n",
+      "Epoch   19/20 Batch 3/3 Cost: 18.635447\n",
+      "Epoch   20/20 Batch 1/3 Cost: 17.549286\n",
+      "Epoch   20/20 Batch 2/3 Cost: 7.824885\n",
+      "Epoch   20/20 Batch 3/3 Cost: 24.961105\n"
+     ]
+    }
+   ],
+   "source": [
+    "nb_epochs = 20\n",
+    "for epoch in range(nb_epochs + 1):\n",
+    "    for batch_idx, samples in enumerate(dataloader):\n",
+    "        x_train, y_train = samples\n",
+    "        # H(x) 계산\n",
+    "        prediction = model(x_train)\n",
+    "\n",
+    "        # cost 계산\n",
+    "        cost = F.mse_loss(prediction, y_train)\n",
+    "\n",
+    "        # cost로 H(x) 개선\n",
+    "        optimizer.zero_grad()\n",
+    "        cost.backward()\n",
+    "        optimizer.step()\n",
+    "\n",
+    "        print('Epoch {:4d}/{} Batch {}/{} Cost: {:.6f}'.format(\n",
+    "            epoch, nb_epochs, batch_idx+1, len(dataloader), cost.item()\n",
+    "        ))"
    ]
   }
  ],
@@ -680,7 +842,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
